# Star-Atlas-HNN-Archive

./: .gitattributes  README.md  promotion-wave-1.md
.github/workflows/: library-pages.yml  repository-consolidation.yml
archive/: README.md
archive/campaign-summaries/: README.md
archive/ingestion-packages/: README.md
archive/manifests/: atlas-brew-combined-manifest.json  atlas-brew-youtube-recovery-2026-07.json  foundation-room-council-evidence-ingestion-2026-07.json  hnn-combined-transcript.json  legacy-written-raw-recovery-2026-07.json  lore-repository-ingestion-2026-07.json  star-atlas-medium-ingestion-2026-07.json
archive/normalized/: README.md
archive/provenance/: README.md
archive/raw/: README.md
archive/reconciliation/: README.md
archive/source-records/: README.md
data/manifests/: normalized-urls.jsonl  star_atlas_content_url_inventory_2026-07-12.json  star_atlas_content_url_inventory_2026-07-12.provenance.json
docs/: INGESTION-SCHEMA-v2.1.md  SCHEMA-v2.1-COMPATIBILITY.md
examples/: ingestion-package-v2.1.json
kb/04-game-and-product-history/: Product-Registry.md
kb/08-guilds-and-dacs/: Guild-Master-Index.md
kb/10-lore-and-canon/: Canon-Registry.md
knowledge/: Entity-Relationship-Map.md  Foundational-Dossiers.md  README.md  Star-Atlas-Identity-and-Scope.md
operations/: README.md
pipeline/: pyproject.toml
pipeline/src/star_atlas_ingest/: __init__.py  cli.py  normalize.py
pipeline/tests/: test_inventory.py  test_normalize.py
publication/: PUBLICATION-CONTRACT.md  README.md
tests/: test_schema_compatibility.py
(+9592 files in other folders)
