[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "star-atlas-ingest"
version = "0.1.0"
description = "Resumable public written-content ingestion for the Star Atlas HNN Archive"
requires-python = ">=3.11"

[project.scripts]
star-atlas-ingest = "star_atlas_ingest.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
